Revision history for Articulate

v0.004 Unreleased
 - Validation now works on items (gh #34)
 - Documentation fixes

v0.003 2015-02-22
 - Fix for gh #33; now works on 5.10.0 - thanks to http://www.cpantesters.org/
 - Documentation fixes - amazing what you notice when it's formatted differently!

v0.002 2015-02-21
 - Fix for gh #32 "keys and push on reference is experimental" - thanks to Slaven Rezić
 - Various dependencies added to Makefile.PL
 - skip_all on t/pod-coverage.t unless Test::POD::Coverage is installed
 - "use Dancer" removed from Articulate::Serialisation::Asset and Articulate::Syntax::Routes

v0.001 2015-02-21
 - First release to CPAN. It's all very alpha.